--- a/AppModules/DaggerDemo/src/main/res/layout/fragment_basic_rv_dev_list.xml
+++ b/AppModules/DaggerDemo/src/main/res/layout/fragment_basic_rv_dev_list.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:id="@+id/refreshLayout"
@@ -20,17 +18,25 @@
             android:layout_height="wrap_content"
             app:srlClassicsSpinnerStyle="FixedBehind" />
 
-        <ListView
-            android:id="@+id/listView"
+        <ezy.ui.layout.LoadingLayout
+            android:id="@+id/loading"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@android:color/white"
-            android:overScrollMode="never"
-            tools:listitem="@android:layout/simple_list_item_2" />
+            android:background="@android:color/white">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/colorBlue"
+                android:overScrollMode="never" />
+
+        </ezy.ui.layout.LoadingLayout>
 
         <com.scwang.smartrefresh.layout.footer.ClassicsFooter
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:srlClassicsSpinnerStyle="FixedBehind" />
     </com.scwang.smartrefresh.layout.SmartRefreshLayout>
-</LinearLayout>
+
+</FrameLayout>
