--- a/AppModules/DaggerDemo/src/main/res/layout/activity_new_home.xml
+++ b/AppModules/DaggerDemo/src/main/res/layout/activity_new_home.xml
@@ -54,11 +54,17 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_50">
 
+            <View
+                android:id="@+id/iv_icon"
+                android:layout_width="@dimen/dp_100"
+                android:layout_height="match_parent"
+                android:layout_alignParentLeft="true" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
+                android:layout_toRightOf="@id/iv_icon"
                 android:text="筛选" />
 
             <TextView
@@ -82,17 +88,38 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/dp_45"
+                    android:gravity="center"
                     android:text="客户列表" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/dp_45"
+                    android:gravity="center"
                     android:text="客户分组" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/dp_45"
+                    android:gravity="center"
+                    android:text="设备名称" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_45"
+                    android:gravity="center"
                     android:text="设备状态" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_45"
+                    android:gravity="center"
+                    android:text="报警类型" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_45"
+                    android:gravity="center"
+                    android:text="日期范围" />
             </LinearLayout>
 
             <me.fangx.haorefresh.HaoRecyclerView
