--- a/AppModules/SampleSmartHome/src/main/res/drawable/selector_item_list.xml
+++ b/AppModules/SampleSmartHome/src/main/res/drawable/selector_item_list.xml
@@ -3,6 +3,6 @@
 	
 	<item android:drawable="@color/material_green_200" android:state_pressed="true" />
 	
-	<item android:drawable="@color/white" />
+	<item android:drawable="@color/steelblue" />
 
 </selector>
