--- a/AppModules/SampleSmartHome/src/main/res/layout/activity_main.xml
+++ b/AppModules/SampleSmartHome/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:orientation="vertical"
-	tools:context="com.example.sash.MainActivity">
+	tools:context="com.example.sash.ui.activity.SampleBluetoothActivity">
 	
 	<android.support.v7.widget.RecyclerView
 		android:id="@+id/recyclerview"
