--- a/AppModules/SampleSmartHome/src/main/res/layout/layout_item_list.xml
+++ b/AppModules/SampleSmartHome/src/main/res/layout/layout_item_list.xml
@@ -23,22 +23,102 @@
 		android:text="mac地址"
 		android:textSize="@dimen/dp_16" />
 	
-	<TextView
-		android:id="@+id/tv_devtype"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:layout_marginTop="@dimen/dp_2"
-		android:text="type"
-		android:textSize="@dimen/dp_16"
-		android:visibility="gone" />
 	
-	<TextView
-		android:id="@+id/tv_uuid"
+	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_marginTop="@dimen/dp_2"
-		android:text="uuid"
-		android:textSize="@dimen/dp_16"
-		android:visibility="gone" />
+		android:layout_marginBottom="@dimen/dp_5"
+		android:layout_marginTop="@dimen/dp_5"
+		android:orientation="horizontal">
+		
+		<TextView
+			android:id="@+id/tv_devtype"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginTop="@dimen/dp_2"
+			android:text="未配对"
+			android:textSize="@dimen/dp_16"
+			android:visibility="visible" />
+		
+		<View
+			android:layout_width="0dp"
+			android:layout_height="match_parent"
+			android:layout_weight="1" />
+		
+		<TextView
+			android:id="@+id/tv_ope_menu"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_gravity="right"
+			android:background="@drawable/shape_orange_b"
+			android:text="其它操作" />
+	
+	</LinearLayout>
+	
+	<LinearLayout
+		android:id="@+id/ll_ext_opt_menu"
+		android:layout_width="match_parent"
+		android:layout_height="@dimen/dp_45"
+		android:layout_marginTop="@dimen/dp_5"
+		android:background="@drawable/shape_orange"
+		android:gravity="center_vertical"
+		android:orientation="horizontal"
+		android:visibility="gone">
+		
+		<TextView
+			android:id="@+id/tv_pair"
+			android:layout_width="0dp"
+			android:layout_height="match_parent"
+			android:layout_weight="1"
+			android:gravity="center"
+			android:text="配对"
+			android:textColor="@color/cornsilk" />
+		
+		<View
+			android:id="@+id/v_d_01"
+			android:layout_width="@dimen/dp_1"
+			android:layout_height="match_parent"
+			android:background="@color/cornsilk" />
+		
+		
+		<TextView
+			android:id="@+id/tv_remove_pair"
+			android:layout_width="0dp"
+			android:layout_height="match_parent"
+			android:layout_weight="1"
+			android:gravity="center"
+			android:text="取消配对"
+			android:textColor="@color/cornsilk" />
+		
+		<View
+			android:id="@+id/v_d_02"
+			android:layout_width="@dimen/dp_1"
+			android:layout_height="match_parent"
+			android:background="@color/cornsilk" />
+		
+		<TextView
+			android:id="@+id/tv_connect"
+			android:layout_width="0dp"
+			android:layout_height="match_parent"
+			android:layout_weight="1"
+			android:gravity="center"
+			android:text="连接"
+			android:textColor="@color/cornsilk" />
+		
+		<View
+			android:id="@+id/v_d_03"
+			android:layout_width="@dimen/dp_1"
+			android:layout_height="match_parent"
+			android:background="@color/cornsilk" />
+		
+		<TextView
+			android:id="@+id/tv_send_test_data"
+			android:layout_width="0dp"
+			android:layout_height="match_parent"
+			android:layout_weight="1"
+			android:gravity="center"
+			android:text="测试"
+			android:textColor="@color/cornsilk" />
+	</LinearLayout>
 
 </LinearLayout>
