--- a/AppModules/SampleSmartHome/src/main/res/menu/menu_main.xml
+++ b/AppModules/SampleSmartHome/src/main/res/menu/menu_main.xml
@@ -1,16 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 	
-	<item
-		android:id="@+id/action_open_bluebooth"
-		android:title="打开蓝牙" />
-	<item
-		android:id="@+id/action_start_scan"
-		android:title="开始扫描蓝牙" />
-	<item
-		android:id="@+id/action_stop_scan"
-		android:title="停止扫描蓝牙" />
-	<item
-		android:id="@+id/action_close_bluebooth"
-		android:title="关闭蓝牙" />
+	<group
+		android:id="@+id/group_1"
+		android:checkableBehavior="single">
+		<item
+			android:id="@+id/action_open_bluebooth"
+			android:title="打开蓝牙" />
+		<item
+			android:id="@+id/action_start_scan"
+			android:title="开始扫描蓝牙" />
+		<item
+			android:id="@+id/action_stop_scan"
+			android:title="停止扫描蓝牙" />
+		<item
+			android:id="@+id/action_close_bluebooth"
+			android:title="关闭蓝牙" />
+	</group>
+	
+	<group
+		android:id="@+id/group_2"
+		android:checkableBehavior="single">
+		<item
+			android:id="@+id/action_bt_sample_01"
+			android:title="示例-文件传递" />
+		<item
+			android:id="@+id/action_bt_sample_02"
+			android:title="示例-文字" />
+	</group>
 </menu>
