--- a/AppModules/SampleSmartHome/src/main/res/layout/activity_app_main.xml
+++ b/AppModules/SampleSmartHome/src/main/res/layout/activity_app_main.xml
@@ -1,19 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:orientation="vertical"
-	android:padding="@dimen/dp_15">
+	android:orientation="vertical">
 	
-	<Button
-		android:id="@+id/btn_manage_bt"
+	<LinearLayout
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:text="蓝牙" />
+		android:layout_height="match_parent"
+		android:orientation="vertical"
+		android:padding="@dimen/dp_15">
+		
+		<Button
+			android:id="@+id/btn_manage_bt"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:text="蓝牙" />
+		
+		<Button
+			android:id="@+id/btn_manage_wifi"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:text="wifi" />
+	</LinearLayout>
 	
-	<Button
-		android:id="@+id/btn_manage_wifi"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:text="wifi" />
-</LinearLayout>
+	<android.support.design.widget.NavigationView
+		android:id="@+id/navi_app_man"
+		android:layout_width="@dimen/dp_230"
+		android:layout_height="match_parent"
+		android:layout_gravity="start"
+		android:background="@color/sr_color_primary"
+		android:scrollbars="none"
+		app:headerLayout="@layout/layout_header_nav"
+		app:menu="@menu/menu_main_nav" />
+</android.support.v4.widget.DrawerLayout>
